# Atomicals-Rust

./: .gitignore  .windsurfrules  3-Atomicals——rust改造要点.md  Cargo.toml  build.rs  build.sh  build_errors.txt  demo.js  worker-build.js
.cargo/: config.toml
docs/: 01_atomicals_ft_铸造实现进展.md  02-wizz-wallet-integration.md  03-atomicals-rust-implementation.md  04_web_worker_optimization.md
examples/: index.html  mint_ft.html
examples/web/: index.html
src/: lib.rs  worker.rs  worker_entry.js
src/errors/: mod.rs
src/operations/: mining.rs  mint_ft.rs  mint_realm.rs  mint_subrealm.rs  mod.rs
src/types/: amount.rs  arc20.rs  atomicals.rs  mint.rs  mod.rs  realm.rs  subrealm.rs  transaction.rs  wasm.rs
src/utils/: mod.rs  script.rs  script_builder.rs  tx_size.rs
src/wallet/: mod.rs
src/wallet/web/: mod.rs  unisat.rs  wizz.rs
src/wasm/: mod.rs
src/workers/: mining_worker.rs
