[package]
name = "atomicals-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust implementation of Atomicals protocol"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
thiserror = "1.0"
anyhow = "1.0"
bitcoin = { version = "0.31", features = ["rand", "serde", "std"] }
async-trait = "0.1"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-appender = "0.2"
hex = "0.4"
sha2 = "0.10"
num_cpus = "1.15"
bip39 = "2.0"
secp256k1 = { version = "0.28", features = ["rand", "global-context"] }
log = "0.4"
chrono = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "console",
    "Storage",
    "Location",
    "History",
    "Response",
    "RequestInit",
    "RequestMode",
    "Request",
    "Headers",
    "Crypto",
    "CryptoKey",
    "Performance",
    "PerformanceTiming",
    "Worker",
    "MessageEvent",
    "DedicatedWorkerGlobalScope",
    "WorkerGlobalScope",
    "WorkerOptions"
] }
serde-wasm-bindgen = "0.5"
js-sys = "0.3"
base64 = "0.21"
getrandom = { version = "0.2", features = ["js"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
console_error_panic_hook = { version = "0.1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full", "sync", "time", "macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rayon = "1.8"
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2"
rand = { version = "0.8", features = ["getrandom"] }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
wasm-opt = ['-O4']

[profile.dev]
opt-level = 0
debug = true